--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"
-          ><img src="img/logo.png" height="70px" width="70px" alt=""
+          ><img src="https://socialprotection.org/sites/default/files/styles/institution_page_logo/public/logos_UNTREF.jpg" height="70px" width="auto" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -410,7 +410,7 @@
       <div class="container-fluid text-center">
         <span
           >Hecho con <3 para
-          <a href="https://soydigitalmind.com">soydigitalmind.com</a></span
+          <a href="https://https://untref.edu.ar/"> Diplo Back @ UNTREF </a></span
         >
       </div>
     </footer>
