--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img class="img-fluid" src="img/logo.png" width="80px" alt="" /></a>
+            <a class="navbar-brand" href="#"><img class="img-fluid" src="https://socialprotection.org/sites/default/files/styles/institution_page_logo/public/logos_UNTREF.jpg" width="80px" alt="" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
