Actualiza los botones en index.html para redirigir a las páginas de servicios correspondientes y mejora la descripción en README.md para incluir la creación de una sección de servicios dinámica.

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-5">
-            <button type="button" class="btn btn-outline-warning mb-3">
+            <button type="button" class="btn btn-outline-warning mb-3" onclick="window.location.href='/servicio/desarrollo'">
               Desarrollo
             </button>
 
@@ -323,7 +323,7 @@
           <div class="col-md-5"><img src="img/coding_.svg" alt="" /></div>
           <div class="col-md-5"><img src="img/marketing.svg" alt="" /></div>
           <div class="col-md-5">
-            <button type="button " class="btn btn-outline-success mb-3">
+            <button type="button" class="btn btn-outline-success mb-3" onclick="window.location.href='/servicio/marketing'">
               Marketing
             </button>
 
@@ -336,7 +336,7 @@
             </p>
           </div>
           <div class="col-md-5">
-            <button type="button" class="btn btn-outline-light mb-3">
+            <button type="button" class="btn btn-outline-light mb-3" onclick="window.location.href='/servicio/ventas'">
               Ventas
             </button>
 
