--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="public/css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
-      rel="stylesheet"
+      rel="stylesheet"public/
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  public/  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img class="img-fluid" src="https://socialprotection.org/sites/default/files/styles/institution_page_logo/public/logos_UNTREF.jpg" width="80px" alt="" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span clapublic/ss="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="public/navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Inicio</a>
                     </li>
@@ -271,13 +271,13 @@
         </div>
         <div class="row my-3 g-3">
           <div class="col-md-4">
-            <img src="img/c1.jpg" alt="Gallery image" class="img-fluid" />
+            <img src="public/img/c1.jpg" alt="Gallery image" class="img-fluid" />
           </div>
           <div class="col-md-4">
-            <img src="img/c2.jpg" alt="Gallery image" class="img-fluid" />
+            <img src="public/img/c2.jpg" alt="Gallery image" class="img-fluid" />
           </div>
           <div class="col-md-4">
-            <img src="img/c3.jpg" alt="Gallery image" class="img-fluid" />
+            <img src="public/img/c3.jpg" alt="Gallery image" class="img-fluid" />
           </div>
         </div>
         <div class="row mt-5 justify-content-end">
